--- a/weasel/WeaselSetup/WeaselSetup.vcxproj
+++ b/weasel/WeaselSetup/WeaselSetup.vcxproj
@@ -21,6 +21,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>$(PLATFORM_TOOLSET)</PlatformToolset>
+    <WindowsTargetPlatformVersion>$(WINDOWS_TARGET_PLATFORM_VERSION)</WindowsTargetPlatformVersion>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -28,6 +29,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <PlatformToolset>$(PLATFORM_TOOLSET)</PlatformToolset>
+    <WindowsTargetPlatformVersion>$(WINDOWS_TARGET_PLATFORM_VERSION)</WindowsTargetPlatformVersion>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
